# recsys-pipeliner

./: .gitignore  README.md  publish.yml  pyproject.toml
.github/actions/pytest/: action.yml
.github/workflows/: pipeline.yml  publish.yml  pytest.yml  test.yml
docker/sklearn/: Dockerfile
notebooks/: README.md  add_deps_to_processor.ipynb  create_protobuf_recordio_file.ipynb  explore_ratings_data.ipynb  item_based_collaborative_filtering.ipynb  matrix-factorization-pytorch.ipynb  sagemaker-pipelines-local-mode.ipynb  sagemaker_pipelines.ipynb  svd_recommender.ipynb  user_based_collaborative_filtering.ipynb  user_item_interactions.ipynb
notebooks/blog/: 01-explore-data.ipynb  02-collaborative-filtering-1.ipynb  02-toy-user-item-dataset.ipynb  03-collaborative-filtering.ipynb  04-sagemaker-pipelines.ipynb  05-surprise.ipynb  05-user-based-collaborative-filtering.ipynb  06-item-based-collaborative-filtering.ipynb  07-multi-armed-bandits.ipynb  07-rating-prediction.ipynb  08-multi-armed-bandits.ipynb
notebooks/blog/data/02-collaborative-filtering-1/: user_item_matrix_sample.npz  user_similarity_matrix_sample.npz
notebooks/blog/data/03-collaborative-filtering/: user_item_matrix_sample.npz
notebooks/containers/: inference.py  preprocess.py  test_container.ipynb  train.py
notebooks/notebooks/pipelines/code/: transform.py
notebooks/other/: sagemaker-pipelines-local-mode.ipynb
notebooks/pipelines/code/: item_recommender_pipeline.py  recommender_pipeline.py  similarity_matrix_transformer.py  transform.py  user_item_similarity_matrix_transformer.py
notebooks/pipelines/recommendations/code/: item_based_recommender.py  preprocessor.py  similarity_matrix_transformer.py  user_based_evaluation.py  user_based_recommender.py  user_based_recommender_evaluation.py  user_item_matrix_transformer.py
notebooks/pipelines/recommendations_np/code/: item_based_evaluation.py  item_based_recommender.py  preprocessor.py
notebooks/recommendations/: 02-toy-user-item-dataset.ipynb  03-collaborative-filtering.ipynb  04-sagemaker-pipelines.ipynb  05-user-based-collaborative-filtering.ipynb  05.b-user-base-collaborative-filtering-v2.ipynb  06-item-based-collaborative-filtering.ipynb  07-rating-prediction copy.ipynb  07-rating-prediction.ipynb
notebooks/recommendations/data/03-collaborative-filtering/: user_similarity_matrix_sample.npz
src/pipeliner/: exceptions.py  factory.py  session.py
src/pipeliner/containers/sklearn/: handler_service.py  mms.py  serving.py
src/pipeliner/recommendations/: encoder.py  pipelines.py  recommender.py  transformer.py  utils.py
src/pipeliner/recommendations/pipelines/item_recommender/: pipeline.py  (+1 more)
src/pipeliner/sagemaker/: pipeline.py  session.py
src/recsys_pipeliner/: base.py  recommender.py  recommenders.py
src/recsys_pipeliner/recommendations/: recommender.py
tests/: conftest.py  fixtures.py  test_factory.py  test_session.py
tests/fixtures/: aws.py  data.py
tests/recommendations/: test_encoder.py  test_recommender.py  test_transformer.py  test_utils.py
tests/test_data/: item_similarity_matrix_toy.csv  recommendations_toy.json  similarity_recommendations_toy.json  similarity_recommendations_toy_probs.npy  test_user_item_ratings.csv  user_item_interactions.csv  user_item_interactions_10000.csv  user_item_matrix_toy.csv  user_item_ratings.npz  user_item_ratings_toy.csv  user_similarity_matrix_toy.csv
