[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeliner"
dynamic = ["version"]
requires-python = ">= 3.11"

dependencies = [
    "boto3",
    "numpy==1.24.3",
    "pandas",
    "pydantic",
    "sagemaker",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
jupyter = [
    "matplotlib",
    "matspy",
    "sagemaker[local]",
    "seaborn",
    "torch",
    "scikit-surprise"
]

[tool.setuptools_scm]
version_file = "src/pipeliner/_version.py"
version_scheme = "python-simplified-semver"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "notebooks"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = ["--cov=src", "--cov-report=html"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/pipeliner/_version.py",
]

[tool.coverage.report]
fail_under = 95
skip_empty = true
include_namespace_packages = true


